navbar section complete

--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,26 @@
+.background {
+    background-color: #5f605d;
+    left: 0;
+    width: 100%;
+    display: block;
+    position: fixed;
+}
+
 .navbar {
     height: 60px;
     width: 100%;
     position: fixed;
+    top: 0%;
     z-index: 2;
     left: 0;
     float: left;
     background-color: #5f605d;
     overflow-x: hidden;
-    padding-top: 20px;
+    padding-top: 16px;
 }
 
 .navbar a {
-    padding: 8px 8px 8px 32px;
+    padding: 8px 8px 8px 24px;
     text-decoration: none;
     font-size: 25px;
     color: #BBBBBB;
@@ -23,4 +32,13 @@
 .navbar a:hover {
     color: #FFFFFF;
     transition: 0.25s;
+}
+
+.divider {
+    color: #A0BACC;
+    border-radius: 2px 2px 2px 2px;
+    border: 2px solid;
+    margin-top: 75px;
+    width: 95%;
+    
 }
