--- a/src/style.css
+++ b/src/style.css
@@ -71,5 +71,17 @@
 }
 
 button {
+    display: block;
     cursor: pointer;
+    width: 192px;
+    height: 48px;
+    border: 2px solid black;
+    background-color: lightgrey;
+    transition: 0.5s;
+    border-radius: 10px;
+    box-shadow: 3px 3px black;
+}
+
+button:hover {
+    background-color: #A0BACC;
 }
