--- a/src/style.css
+++ b/src/style.css
@@ -68,6 +68,7 @@
     grid-template-columns: repeat(3, auto);
     width: 240px;
     margin:auto;
+    padding-top: 20px;
 }
 
 button {
@@ -85,3 +86,23 @@ button {
 button:hover {
     background-color: #A0BACC;
 }
+
+.slidecontainer {
+    width: 100%;
+    display: block;
+    margin: auto;
+}
+
+#difficultySlider {
+    appearance: none;  
+    width: 20%; 
+    height: 12px; 
+    background: #d3d3d3; 
+    outline: none; 
+    opacity: 0.7; 
+    -webkit-transition: .2s; 
+    transition: opacity .2s;
+    border-radius: 6px;
+    display: block;
+    margin: auto;
+  }
